--- a/HeadlessExport/App.config
+++ b/HeadlessExport/App.config
@@ -13,6 +13,10 @@
         <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.29.0" newVersion="8.0.29.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
